logs/offboard_pkg/build.make.457.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:250:6: error: no declaration matches ‘void TaskManager::publish_lla(Eigen::Vector3d&, bool)’
  250 | void TaskManager::publish_lla(Eigen::Vector3d &pos, bool change_yaw)
      |      ^~~~~~~~~~~
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:98:10: note: candidate is: ‘void TaskManager::publish_lla(Eigen::Vector3d&)’
   98 |     void publish_lla(Eigen::Vector3d &pos);
      |          ^~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:17:7: note: ‘class TaskManager’ defined here
   17 | class TaskManager
      |       ^~~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
